Use `pysnmplib` instead of `pysnmp` (#69841)

--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -427,7 +427,7 @@ bravia-tv==1.0.11
 broadlink==0.18.1
 
 # homeassistant.components.brother
-brother==1.1.0
+brother==1.2.0
 
 # homeassistant.components.brottsplatskartan
 brottsplatskartan==0.0.1
@@ -1823,7 +1823,7 @@ pysmarty==0.8
 pysml==0.0.7
 
 # homeassistant.components.snmp
-pysnmp==4.4.12
+pysnmplib==5.0.10
 
 # homeassistant.components.soma
 pysoma==0.0.10
