--- a/mypy.ini
+++ b/mypy.ini
@@ -539,6 +539,17 @@ no_implicit_optional = true
 warn_return_any = true
 warn_unreachable = true
 
+[mypy-homeassistant.components.deconz.light]
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+warn_unreachable = true
+
 [mypy-homeassistant.components.deconz.services]
 check_untyped_defs = true
 disallow_incomplete_defs = true
@@ -2608,9 +2619,6 @@ ignore_errors = true
 ignore_errors = true
 
 [mypy-homeassistant.components.deconz.fan]
-ignore_errors = true
-
-[mypy-homeassistant.components.deconz.light]
 ignore_errors = true
 
 [mypy-homeassistant.components.deconz.lock]
