Add markdown requirement to integration manifest

--- a/homeassistant/components/matrix/manifest.json
+++ b/homeassistant/components/matrix/manifest.json
@@ -2,7 +2,7 @@
   "domain": "matrix",
   "name": "Matrix",
   "documentation": "https://www.home-assistant.io/integrations/matrix",
-  "requirements": ["matrix-client==0.4.0"],
+  "requirements": ["matrix-client==0.4.0", "markdown==3.3.6"],
   "codeowners": ["@tinloaf"],
   "iot_class": "cloud_push",
   "loggers": ["matrix_client"]
