--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -37,6 +37,7 @@ types-chardet==0.1.5
 types-decorator==0.1.7
 types-enum34==0.1.8
 types-ipaddress==0.1.5
+types-markdown==3.3.12
 types-pkg-resources==0.1.3
 types-python-slugify==0.1.2
 types-pytz==2021.1.2
