--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -760,8 +760,8 @@ build.json @home-assistant/supervisor
 /tests/components/persistent_notification/ @home-assistant/core
 /homeassistant/components/philips_js/ @elupus
 /tests/components/philips_js/ @elupus
-/homeassistant/components/pi_hole/ @fabaff @johnluetke @shenxn
-/tests/components/pi_hole/ @fabaff @johnluetke @shenxn
+/homeassistant/components/pi_hole/ @johnluetke @shenxn
+/tests/components/pi_hole/ @johnluetke @shenxn
 /homeassistant/components/picnic/ @corneyl
 /tests/components/picnic/ @corneyl
 /homeassistant/components/pilight/ @trekky12
