--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -795,8 +795,8 @@ build.json @home-assistant/supervisor
 /tests/components/pure_energie/ @klaasnicolaas
 /homeassistant/components/push/ @dgomes
 /tests/components/push/ @dgomes
-/homeassistant/components/pvoutput/ @fabaff @frenck
-/tests/components/pvoutput/ @fabaff @frenck
+/homeassistant/components/pvoutput/ @frenck
+/tests/components/pvoutput/ @frenck
 /homeassistant/components/pvpc_hourly_pricing/ @azogue
 /tests/components/pvpc_hourly_pricing/ @azogue
 /homeassistant/components/qbittorrent/ @geoffreylagaisse
