--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -382,8 +382,8 @@ build.json @home-assistant/supervisor
 /homeassistant/components/github/ @timmo001 @ludeeus
 /tests/components/github/ @timmo001 @ludeeus
 /homeassistant/components/gitter/ @fabaff
-/homeassistant/components/glances/ @fabaff @engrbm87
-/tests/components/glances/ @fabaff @engrbm87
+/homeassistant/components/glances/ @engrbm87
+/tests/components/glances/ @engrbm87
 /homeassistant/components/goalzero/ @tkdrob
 /tests/components/goalzero/ @tkdrob
 /homeassistant/components/gogogate2/ @vangorra @bdraco
