Expand the list of possible LIFX bulb models for HomeKit discovery
Signed-off-by: Avi Miller <me@dje.li>

--- a/homeassistant/components/lifx/manifest.json
+++ b/homeassistant/components/lifx/manifest.json
@@ -8,12 +8,17 @@
     "models": [
       "LIFX A19",
       "LIFX Beam",
-      "LIFX Candle Color",
+      "LIFX BR30",
+      "LIFX Candle",
       "LIFX Clean",
+      "LIFX Color",
       "LIFX Dlight",
+      "LIFX Filament",
       "LIFX GU10",
       "LIFX Mini",
-      "LIFX Nightvision"
+      "LIFX Nightvision",
+      "LIFX White",
+      "LIFX Z"
     ]
   },
   "codeowners": [],
