--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1098,8 +1098,8 @@ build.json @home-assistant/supervisor
 /homeassistant/components/verisure/ @frenck
 /tests/components/verisure/ @frenck
 /homeassistant/components/versasense/ @flamm3blemuff1n
-/homeassistant/components/version/ @fabaff @ludeeus
-/tests/components/version/ @fabaff @ludeeus
+/homeassistant/components/version/ @ludeeus
+/tests/components/version/ @ludeeus
 /homeassistant/components/vesync/ @markperdue @webdjoe @thegardenmonkey
 /tests/components/vesync/ @markperdue @webdjoe @thegardenmonkey
 /homeassistant/components/vicare/ @oischinger
