--- a/mypy.ini
+++ b/mypy.ini
@@ -561,6 +561,17 @@ no_implicit_optional = true
 warn_return_any = true
 warn_unreachable = true
 
+[mypy-homeassistant.components.deconz.number]
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+warn_unreachable = true
+
 [mypy-homeassistant.components.deconz.services]
 check_untyped_defs = true
 disallow_incomplete_defs = true
@@ -2655,9 +2666,6 @@ ignore_errors = true
 ignore_errors = true
 
 [mypy-homeassistant.components.deconz.logbook]
-ignore_errors = true
-
-[mypy-homeassistant.components.deconz.number]
 ignore_errors = true
 
 [mypy-homeassistant.components.deconz.sensor]
