--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -992,6 +992,8 @@ build.json @home-assistant/supervisor
 /tests/components/switch/ @home-assistant/core
 /homeassistant/components/switch_as_x/ @home-assistant/core
 /tests/components/switch_as_x/ @home-assistant/core
+/homeassistant/components/switchbee/ @jafar-atili
+/tests/components/switchbee/ @jafar-atili
 /homeassistant/components/switchbot/ @danielhiversen @RenierM26
 /tests/components/switchbot/ @danielhiversen @RenierM26
 /homeassistant/components/switcher_kis/ @tomerfi @thecode
