Switch to using ULIDs for context_ids
This should reduce the size of the context_id index
as random data is hard to index.

```
*** Index IX_EVENTS_CONTEXT_ID of table EVENTS ********************************

Percentage of total database......................   7.2%
Number of entries................................. 641555
Bytes of storage consumed......................... 29597696
Bytes of payload.................................. 24379090    82.4%
Bytes of metadata................................. 2011373      6.8%
B-tree depth...................................... 3
Average payload per entry......................... 38.00
Average unused bytes per entry.................... 5.00
Average metadata per entry........................ 3.14
Average fanout.................................... 79.00
Non-sequential pages.............................. 6498        89.9%
Maximum payload per entry......................... 38
Entries that use overflow......................... 0            0.0%
Index pages used.................................. 91
Primary pages used................................ 7135
Overflow pages used............................... 0
Total pages used.................................. 7226
Unused bytes on index pages....................... 50614       13.6%
Unused bytes on primary pages..................... 3156619     10.8%
Unused bytes on overflow pages.................... 0
Unused bytes on all pages......................... 3207233     10.8%
```

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ install_requires =
     cryptography==35.0.0
     pip>=21.0,<22.1
     python-slugify==4.0.1
+    python-ulid==1.1.0
     pyyaml==6.0
     requests==2.27.1
     typing-extensions>=3.10.0.2,<5.0
