--- a/mypy.ini
+++ b/mypy.ini
@@ -506,6 +506,17 @@ no_implicit_optional = true
 warn_return_any = true
 warn_unreachable = true
 
+[mypy-homeassistant.components.deconz.binary_sensor]
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+warn_unreachable = true
+
 [mypy-homeassistant.components.deconz.climate]
 check_untyped_defs = true
 disallow_incomplete_defs = true
@@ -539,6 +550,17 @@ no_implicit_optional = true
 warn_return_any = true
 warn_unreachable = true
 
+[mypy-homeassistant.components.deconz.fan]
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+warn_unreachable = true
+
 [mypy-homeassistant.components.deconz.gateway]
 check_untyped_defs = true
 disallow_incomplete_defs = true
@@ -551,6 +573,28 @@ warn_return_any = true
 warn_unreachable = true
 
 [mypy-homeassistant.components.deconz.light]
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+warn_unreachable = true
+
+[mypy-homeassistant.components.deconz.logbook]
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+warn_unreachable = true
+
+[mypy-homeassistant.components.deconz.number]
 check_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_subclassing_any = true
@@ -2697,22 +2741,10 @@ ignore_errors = true
 [mypy-homeassistant.components.conversation.default_agent]
 ignore_errors = true
 
-[mypy-homeassistant.components.deconz.binary_sensor]
-ignore_errors = true
-
 [mypy-homeassistant.components.deconz.cover]
 ignore_errors = true
 
-[mypy-homeassistant.components.deconz.fan]
-ignore_errors = true
-
 [mypy-homeassistant.components.deconz.lock]
-ignore_errors = true
-
-[mypy-homeassistant.components.deconz.logbook]
-ignore_errors = true
-
-[mypy-homeassistant.components.deconz.number]
 ignore_errors = true
 
 [mypy-homeassistant.components.deconz.siren]
