--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1019,6 +1019,9 @@ mitemp_bt==0.0.5
 # homeassistant.components.moehlenhoff_alpha2
 moehlenhoff-alpha2==1.1.2
 
+# homeassistant.components.moonraker
+moonraker-api==2.0.4
+
 # homeassistant.components.motion_blinds
 motionblinds==0.6.4
 
