--- a/homeassistant/components/ialarmxr/manifest.json
+++ b/homeassistant/components/ialarmxr/manifest.json
@@ -5,6 +5,6 @@
   "requirements": ["pyialarmxr==1.0.6"],
   "codeowners": ["@bigmoby"],
   "config_flow": true,
-  "iot_class": "local_polling",
+  "iot_class": "cloud_polling",
   "loggers": ["pyialarmxr"]
 }
