--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -714,6 +714,9 @@ laundrify_aio==1.1.2
 # homeassistant.components.led_ble
 led-ble==0.9.1
 
+# homeassistant.components.elro_connects
+lib-elro-connects==0.1.1.post4
+
 # homeassistant.components.foscam
 libpyfoscam==1.0
 
