--- a/homeassistant/components/google_translate/manifest.json
+++ b/homeassistant/components/google_translate/manifest.json
@@ -2,7 +2,7 @@
   "domain": "google_translate",
   "name": "Google Translate Text-to-Speech",
   "documentation": "https://www.home-assistant.io/integrations/google_translate",
-  "requirements": ["gTTS==2.2.4"],
+  "requirements": ["gTTS==2.2.4","pydub~=0.25"],
   "codeowners": [],
   "iot_class": "cloud_push",
   "loggers": ["gtts"]
