--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1440,6 +1440,9 @@ pydoods==1.0.2
 # homeassistant.components.android_ip_webcam
 pydroid-ipcam==1.3.1
 
+# homeassistant.components.google_translate
+pydub=0.25.1
+
 # homeassistant.components.ebox
 pyebox==1.1.4
 
