--- a/homeassistant/components/philips_air_purifier/manifest.json
+++ b/homeassistant/components/philips_air_purifier/manifest.json
@@ -3,9 +3,7 @@
   "name": "Philips Air Purifier",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/philips_air_purifier",
-  "requirements": ["phipsair==0.4.0"],
-  "codeowners": [
-    "@mfrister"
-  ],
+  "requirements": ["phipsair==0.4.1"],
+  "codeowners": ["@mfrister"],
   "iot_class": "local_push"
 }
