--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1045,6 +1045,7 @@ build.json @home-assistant/supervisor
 /homeassistant/components/tractive/ @Danielhiversen @zhulik @bieniu
 /tests/components/tractive/ @Danielhiversen @zhulik @bieniu
 /homeassistant/components/trafikverket_ferry/ @gjohansson-ST
+/tests/components/trafikverket_ferry/ @gjohansson-ST
 /homeassistant/components/trafikverket_train/ @endor-force @gjohansson-ST
 /tests/components/trafikverket_train/ @endor-force @gjohansson-ST
 /homeassistant/components/trafikverket_weatherstation/ @endor-force @gjohansson-ST
