--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -954,6 +954,8 @@ build.json @home-assistant/supervisor
 /tests/components/sql/ @dgomes
 /homeassistant/components/squeezebox/ @rajlaud
 /tests/components/squeezebox/ @rajlaud
+/homeassistant/components/squeezebox_player/ @marcelveldt
+/tests/components/squeezebox_player/ @marcelveldt
 /homeassistant/components/srp_energy/ @briglx
 /tests/components/srp_energy/ @briglx
 /homeassistant/components/starline/ @anonym-tsk
