--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -715,7 +715,7 @@ laundrify_aio==1.1.2
 led-ble==0.9.1
 
 # homeassistant.components.elro_connects
-lib-elro-connects==0.1.1.post4
+lib-elro-connects==0.1.2
 
 # homeassistant.components.foscam
 libpyfoscam==1.0
