--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -875,6 +875,9 @@ influxdb-client==1.24.0
 # homeassistant.components.influxdb
 influxdb==5.3.1
 
+# homeassistant.components.insteon
+insteon-frontend-home-assistant==0.0.1b3
+
 # homeassistant.components.intellifire
 intellifire4py==1.0.2
 
@@ -1538,7 +1541,7 @@ pyialarm==1.9.0
 pyicloud==1.0.0
 
 # homeassistant.components.insteon
-pyinsteon==1.0.13
+pyinsteon==1.1.0b1
 
 # homeassistant.components.intesishome
 pyintesishome==1.7.6
