--- a/homeassistant/components/openuv/services.yaml
+++ b/homeassistant/components/openuv/services.yaml
@@ -2,11 +2,35 @@
 update_data:
   name: Update data
   description: Request new data from OpenUV. Consumes two API calls.
+  fields:
+    device_id:
+      name: OpenUV Instance
+      description: The OpenUV instance to request data from
+      required: true
+      selector:
+        device:
+          integration: openuv
 
 update_uv_index_data:
   name: Update UV index data
   description: Request new UV index data from OpenUV.
+  fields:
+    device_id:
+      name: OpenUV Instance
+      description: The OpenUV instance to request data from
+      required: true
+      selector:
+        device:
+          integration: openuv
 
 update_protection_data:
   name: Update protection data
   description: Request new protection window data from OpenUV.
+  fields:
+    device_id:
+      name: OpenUV Instance
+      description: The OpenUV instance to request data from
+      required: true
+      selector:
+        device:
+          integration: openuv
