--- a/homeassistant/components/litterrobot/manifest.json
+++ b/homeassistant/components/litterrobot/manifest.json
@@ -6,6 +6,6 @@
   "requirements": ["pylitterbot==2022.9.3"],
   "codeowners": ["@natekspencer", "@tkdrob"],
   "dhcp": [{ "hostname": "litter-robot4" }],
-  "iot_class": "cloud_polling",
+  "iot_class": "cloud_push",
   "loggers": ["pylitterbot"]
 }
