--- a/.coveragerc
+++ b/.coveragerc
@@ -64,6 +64,7 @@ omit =
     homeassistant/components/anthemav/media_player.py
     homeassistant/components/apcupsd/*
     homeassistant/components/apple_tv/__init__.py
+    homeassistant/components/apple_tv/browse_media.py
     homeassistant/components/apple_tv/media_player.py
     homeassistant/components/apple_tv/remote.py
     homeassistant/components/aqualogic/*
