--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1165,6 +1165,8 @@ build.json @home-assistant/supervisor
 /tests/components/tuya/ @Tuya @zlinoliver @frenck
 /homeassistant/components/twentemilieu/ @frenck
 /tests/components/twentemilieu/ @frenck
+/homeassistant/components/twilio/ @engrbm87
+/tests/components/twilio/ @engrbm87
 /homeassistant/components/twinkly/ @dr1rrb @Robbie1221
 /tests/components/twinkly/ @dr1rrb @Robbie1221
 /homeassistant/components/ukraine_alarm/ @PaulAnnekov
