--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1620,6 +1620,9 @@ thermobeacon-ble==0.3.1
 # homeassistant.components.thermopro
 thermopro-ble==0.4.3
 
+# homeassistant.components.tilt_ble
+tilt-ble==0.2.3
+
 # homeassistant.components.todoist
 todoist-python==8.0.0
 
