--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -241,6 +241,7 @@ homeassistant/components/efergy/* @tkdrob
 tests/components/efergy/* @tkdrob
 homeassistant/components/egardia/* @jeroenterheerdt
 homeassistant/components/eight_sleep/* @mezz64 @raman325
+tests/components/eight_sleep/* @mezz64 @raman325
 homeassistant/components/elgato/* @frenck
 tests/components/elgato/* @frenck
 homeassistant/components/elkm1/* @gwww @bdraco
@@ -506,6 +507,7 @@ homeassistant/components/lcn/* @alengwenus
 tests/components/lcn/* @alengwenus
 homeassistant/components/lg_netcast/* @Drafteed
 homeassistant/components/life360/* @pnbruckner
+tests/components/life360/* @pnbruckner
 homeassistant/components/linux_battery/* @fabaff
 homeassistant/components/litejet/* @joncar
 tests/components/litejet/* @joncar
@@ -751,6 +753,7 @@ tests/components/rachio/* @bdraco
 homeassistant/components/radarr/* @tkdrob
 tests/components/radarr/* @tkdrob
 homeassistant/components/radiotherm/* @vinnyfuria
+tests/components/radiotherm/* @vinnyfuria
 homeassistant/components/rainbird/* @konikvranik
 homeassistant/components/raincloud/* @vanstinator
 homeassistant/components/rainforest_eagle/* @gtdiehl @jcalbert
@@ -805,6 +808,7 @@ homeassistant/components/scene/* @home-assistant/core
 tests/components/scene/* @home-assistant/core
 homeassistant/components/schluter/* @prairieapps
 homeassistant/components/scrape/* @fabaff
+tests/components/scrape/* @fabaff
 homeassistant/components/screenlogic/* @dieselrabbit @bdraco
 tests/components/screenlogic/* @dieselrabbit @bdraco
 homeassistant/components/script/* @home-assistant/core
@@ -942,10 +946,12 @@ tests/components/tag/* @balloob @dmulcahey
 homeassistant/components/tailscale/* @frenck
 tests/components/tailscale/* @frenck
 homeassistant/components/tankerkoenig/* @guillempages
+tests/components/tankerkoenig/* @guillempages
 homeassistant/components/tapsaff/* @bazwilliams
 homeassistant/components/tasmota/* @emontnemery
 tests/components/tasmota/* @emontnemery
 homeassistant/components/tautulli/* @ludeeus
+tests/components/tautulli/* @ludeeus
 homeassistant/components/tellduslive/* @fredrike
 tests/components/tellduslive/* @fredrike
 homeassistant/components/template/* @PhracturedBlue @tetienne @home-assistant/core
@@ -964,6 +970,7 @@ homeassistant/components/time_date/* @fabaff
 tests/components/time_date/* @fabaff
 homeassistant/components/tmb/* @alemuro
 homeassistant/components/todoist/* @boralyl
+tests/components/todoist/* @boralyl
 homeassistant/components/tolo/* @MatthiasLohr
 tests/components/tolo/* @MatthiasLohr
 homeassistant/components/totalconnect/* @austinmroczek
@@ -977,6 +984,7 @@ tests/components/trace/* @home-assistant/core
 homeassistant/components/tractive/* @Danielhiversen @zhulik @bieniu
 tests/components/tractive/* @Danielhiversen @zhulik @bieniu
 homeassistant/components/trafikverket_train/* @endor-force @gjohansson-ST
+tests/components/trafikverket_train/* @endor-force @gjohansson-ST
 homeassistant/components/trafikverket_weatherstation/* @endor-force @gjohansson-ST
 tests/components/trafikverket_weatherstation/* @endor-force @gjohansson-ST
 homeassistant/components/transmission/* @engrbm87 @JPHutchins
