--- a/.coveragerc
+++ b/.coveragerc
@@ -139,6 +139,7 @@ omit =
     homeassistant/components/bosch_shc/sensor.py
     homeassistant/components/bosch_shc/switch.py
     homeassistant/components/braviatv/__init__.py
+    homeassistant/components/braviatv/button.py
     homeassistant/components/braviatv/const.py
     homeassistant/components/braviatv/coordinator.py
     homeassistant/components/braviatv/entity.py
