--- a/homeassistant/components/airq/manifest.json
+++ b/homeassistant/components/airq/manifest.json
@@ -6,5 +6,5 @@
   "requirements": ["aioairq==0.2.3"],
   "codeowners": ["@Sibgatulin", "@dl2080"],
   "iot_class": "local_polling",
-  "loggers": ["airq"]
+  "loggers": ["aioairq"]
 }
