--- a/homeassistant/components/ecowitt/manifest.json
+++ b/homeassistant/components/ecowitt/manifest.json
@@ -3,6 +3,7 @@
   "name": "Ecowitt",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/ecowitt",
+  "dependencies": ["webhook"],
   "requirements": ["aioecowitt==2022.09.1"],
   "codeowners": ["@pvizeli"],
   "iot_class": "local_push"
