--- a/homeassistant/components/coolmaster/manifest.json
+++ b/homeassistant/components/coolmaster/manifest.json
@@ -3,8 +3,8 @@
   "name": "CoolMasterNet",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/coolmaster",
-  "requirements": ["pycoolmasternet-async==0.1.2"],
-  "codeowners": ["@OnFreund"],
+  "requirements": ["pycoolmasternet-async==0.1.3"],
+  "codeowners": ["@OnFreund", "@Rjevski"],
   "iot_class": "local_polling",
   "loggers": ["pycoolmasternet_async"]
 }
