--- a/homeassistant/components/solax/manifest.json
+++ b/homeassistant/components/solax/manifest.json
@@ -2,9 +2,7 @@
   "domain": "solax",
   "name": "SolaX Power",
   "documentation": "https://www.home-assistant.io/integrations/solax",
-  "requirements": [
-    "solax@git+https://github.com/VadimKraus/solax@feature/units"
-  ],
+  "requirements": ["solax==0.3.0"],
   "codeowners": ["@squishykid"],
   "iot_class": "local_polling",
   "config_flow": true,
