--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1562,6 +1562,7 @@ spiderpy==1.6.1
 # homeassistant.components.spotify
 spotipy==2.20.0
 
+# homeassistant.components.analytics
 # homeassistant.components.recorder
 # homeassistant.components.sql
 sqlalchemy==1.4.41
