--- a/homeassistant/components/template/manifest.json
+++ b/homeassistant/components/template/manifest.json
@@ -3,6 +3,7 @@
   "name": "Template",
   "documentation": "https://www.home-assistant.io/integrations/template",
   "codeowners": ["@PhracturedBlue", "@tetienne", "@home-assistant/core"],
+  "requirements": ["voluptuous==0.13.1"],
   "quality_scale": "internal",
   "after_dependencies": ["group"],
   "iot_class": "local_push"
