--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2466,6 +2466,9 @@ vilfo-api-client==0.3.2
 # homeassistant.components.volkszaehler
 volkszaehler==0.3.2
 
+# homeassistant.components.template
+voluptuous==0.13.1
+
 # homeassistant.components.volvooncall
 volvooncall==0.10.0
 
