Add update entity

--- a/.coveragerc
+++ b/.coveragerc
@@ -1096,6 +1096,7 @@ omit =
     homeassistant/components/shelly/light.py
     homeassistant/components/shelly/number.py
     homeassistant/components/shelly/sensor.py
+    homeassistant/components/shelly/update.py
     homeassistant/components/shelly/utils.py
     homeassistant/components/sigfox/sensor.py
     homeassistant/components/simplepush/__init__.py
