--- a/homeassistant/components/google_sheets/manifest.json
+++ b/homeassistant/components/google_sheets/manifest.json
@@ -1,9 +1,9 @@
 {
-  "domain": "google_drive",
-  "name": "Google Drive",
+  "domain": "google_sheets",
+  "name": "Google Sheets",
   "config_flow": true,
   "dependencies": ["application_credentials"],
-  "documentation": "https://www.home-assistant.io/integrations/google_drive/",
+  "documentation": "https://www.home-assistant.io/integrations/google_sheets/",
   "requirements": ["gspread==5.5.0"],
   "codeowners": ["@tkdrob"],
   "iot_class": "cloud_polling"
