--- a/homeassistant/components/keymitt_ble/manifest.json
+++ b/homeassistant/components/keymitt_ble/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "keymitt_ble",
-  "name": "MicroBot Push",
+  "name": "Keymitt MicroBot Push",
   "documentation": "https://www.home-assistant.io/integrations/keymitt_ble",
   "config_flow": true,
   "bluetooth": [
