inital implementation of config flow for lg_netcast integration

--- a/homeassistant/components/lg_netcast/manifest.json
+++ b/homeassistant/components/lg_netcast/manifest.json
@@ -4,6 +4,7 @@
   "documentation": "https://www.home-assistant.io/integrations/lg_netcast",
   "requirements": ["pylgnetcast==0.3.7"],
   "codeowners": ["@Drafteed"],
+  "config_flow": true,
   "iot_class": "local_polling",
   "loggers": ["pylgnetcast"]
 }
