Add utils to ignore

--- a/.coveragerc
+++ b/.coveragerc
@@ -833,6 +833,7 @@ omit =
     homeassistant/components/nfandroidtv/__init__.py
     homeassistant/components/nfandroidtv/notify.py
     homeassistant/components/nibe_heatpump/__init__.py
+    homeassistant/components/nibe_heatpump/utils.py
     homeassistant/components/nibe_heatpump/sensor.py
     homeassistant/components/niko_home_control/light.py
     homeassistant/components/nilu/air_quality.py
