regen for tests

--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -657,6 +657,9 @@ hyperion-py==0.7.5
 # homeassistant.components.iaqualink
 iaqualink==0.4.1
 
+# homeassistant.components.ibeacon
+ibeacon_ble==0.6.2
+
 # homeassistant.components.ping
 icmplib==3.0
 
