Add Snooz component

--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1893,6 +1893,9 @@ pysml==0.0.8
 # homeassistant.components.snmp
 pysnmplib==5.0.15
 
+# homeassistant.components.snooz
+pysnooz==0.7.7
+
 # homeassistant.components.soma
 pysoma==0.0.10
 
