--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1325,6 +1325,9 @@ pysmartthings==0.7.6
 # homeassistant.components.snmp
 pysnmplib==5.0.15
 
+# homeassistant.components.snooz
+pysnooz==0.7.7
+
 # homeassistant.components.soma
 pysoma==0.0.10
 
