Add Keymitt BLE integration (#76575)
Co-authored-by: J. Nick Koston <nick@koston.org>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -580,6 +580,8 @@ build.json @home-assistant/supervisor
 /homeassistant/components/kegtron/ @Ernst79
 /tests/components/kegtron/ @Ernst79
 /homeassistant/components/keyboard_remote/ @bendavid @lanrat
+/homeassistant/components/keymitt_ble/ @spycle
+/tests/components/keymitt_ble/ @spycle
 /homeassistant/components/kmtronic/ @dgomes
 /tests/components/kmtronic/ @dgomes
 /homeassistant/components/knx/ @Julius2342 @farmio @marvin-w
