Support for nibe heat pumps with local access (#78542)
* Add nibe local integration

* Add sensor platform

* Enable sensor platform

* Fix manifest

* Correct domain after rename

* Adjust tests for rename

* Correct codeowners

* Add requirements for tests

* Grab coil by name

* Switch to home assistant error

* Config entry always exist

* Switch to create task

* Bump to 0.5.0

* Use new coils access

* Remove unneeded check

* Use single instance of logger

* Test invalid ip

* Don't allow coil to be None

* Remove sleep

* Initialize data in coordinator init

* Add utils to ignore

* Update homeassistant/components/nibe_heatpump/manifest.json

Co-authored-by: J. Nick Koston <nick@koston.org>

* Use generator instead

* Use tenacity as retry decorator

* Use package instead of name to get logger

* Skip broad exception handling

* Catch missing coil exception

* Add missing test

Co-authored-by: J. Nick Koston <nick@koston.org>

--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1142,6 +1142,9 @@ nextcord==2.0.0a8
 # homeassistant.components.nextdns
 nextdns==1.1.1
 
+# homeassistant.components.nibe_heatpump
+nibe==0.5.0
+
 # homeassistant.components.niko_home_control
 niko-home-control==0.2.1
 
@@ -2368,6 +2371,9 @@ temescal==0.5
 
 # homeassistant.components.temper
 temperusb==1.5.3
+
+# homeassistant.components.nibe_heatpump
+tenacity==8.0.1
 
 # homeassistant.components.tensorflow
 # tensorflow==2.5.0
