--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -823,6 +823,9 @@ nextcord==2.0.0a8
 # homeassistant.components.nextdns
 nextdns==1.1.1
 
+# homeassistant.components.nibe_heatpump
+nibe==0.5.0
+
 # homeassistant.components.nfandroidtv
 notifications-android-tv==0.1.5
 
@@ -1620,6 +1623,9 @@ tellduslive==0.10.11
 
 # homeassistant.components.lg_soundbar
 temescal==0.5
+
+# homeassistant.components.nibe_heatpump
+tenacity==8.0.1
 
 # homeassistant.components.powerwall
 tesla-powerwall==0.3.18
