IntelliFire Fan Support (#74181)
Co-authored-by: J. Nick Koston <nick@koston.org>
Co-authored-by: Paulus Schoutsen <balloob@gmail.com>

--- a/.coveragerc
+++ b/.coveragerc
@@ -574,6 +574,7 @@ omit =
     homeassistant/components/intellifire/climate.py
     homeassistant/components/intellifire/coordinator.py
     homeassistant/components/intellifire/entity.py
+    homeassistant/components/intellifire/fan.py
     homeassistant/components/intellifire/sensor.py
     homeassistant/components/intellifire/switch.py
     homeassistant/components/intesishome/*
