--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -650,8 +650,8 @@ build.json @home-assistant/supervisor
 /homeassistant/components/lyric/ @timmo001
 /tests/components/lyric/ @timmo001
 /homeassistant/components/mastodon/ @fabaff
-/homeassistant/components/matrix/ @tinloaf @PaarthShah
-/tests/components/matrix/ @tinloaf @PaarthShah
+/homeassistant/components/matrix/ @tinloaf
+/tests/components/matrix/ @tinloaf
 /homeassistant/components/mazda/ @bdr99
 /tests/components/mazda/ @bdr99
 /homeassistant/components/meater/ @Sotolotl @emontnemery
