--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1122,6 +1122,9 @@ insteon-frontend-home-assistant==0.4.0
 # homeassistant.components.intellifire
 intellifire4py==2.2.2
 
+# homeassistant.components.iotty
+iottycloud==0.0.2
+
 # homeassistant.components.iperf3
 iperf3==0.1.11
 
