--- a/.coveragerc
+++ b/.coveragerc
@@ -150,6 +150,10 @@ omit =
     homeassistant/components/braviatv/coordinator.py
     homeassistant/components/braviatv/media_player.py
     homeassistant/components/braviatv/remote.py
+    homeassistant/components/bring/__init__.py
+    homeassistant/components/bring/const.py
+    homeassistant/components/bring/coordinator.py
+    homeassistant/components/bring/todo.py
     homeassistant/components/broadlink/climate.py
     homeassistant/components/broadlink/light.py
     homeassistant/components/broadlink/remote.py
