--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2177,6 +2177,9 @@ python-awair==0.2.4
 # homeassistant.components.blockchain
 python-blockchain-api==0.0.2
 
+# homeassistant.components.bring
+python-bring-api==2.0.0
+
 # homeassistant.components.bsblan
 python-bsblan==0.5.18
 
