Add SpeakerHub support to YoLink (#104678)
* SpeakerHub support

* Remove unnecessary code

* fix entity description

* Fix as suggestion

* fixes

* fixes as suggestion & remove Speker Hub service

--- a/.coveragerc
+++ b/.coveragerc
@@ -1617,6 +1617,7 @@ omit =
     homeassistant/components/yolink/entity.py
     homeassistant/components/yolink/light.py
     homeassistant/components/yolink/lock.py
+    homeassistant/components/yolink/number.py
     homeassistant/components/yolink/sensor.py
     homeassistant/components/yolink/siren.py
     homeassistant/components/yolink/switch.py
