--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1305,6 +1305,9 @@ mutesync==0.0.1
 # homeassistant.components.permobil
 mypermobil==0.1.6
 
+# homeassistant.components.myuplink
+myuplink==0.0.9
+
 # homeassistant.components.nad
 nad-receiver==0.3.0
 
